# prometheus_grafana

./: Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yaml
monitoring/: prometheus.yaml
monitoring/grafana_provisioning/dashboards/demo_dashboards/: dashboard.json
src/: main.rs
